<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="eula_title">PodNoms Podcatcher</string>
    <string name="eula_text">Welcome to PodNoms Podcatcher\r\n. Please sign up for an account at
        http://www.podnoms.com/
    </string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="app_name">PodNoms Podcatcher</string>
    <string name="search_hint">Search…</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_search">Search</string>
    <string name="description_home">Home</string>
    <string name="description_logo">Arse</string>
    <string name="description_settings">Settings</string>
    <string name="select_text">Select account</string>
    <string name="click_next_text">Next</string>
    <string name="processing">Processing</string>
    <string name="sync_starting">Sync starting</string>
    <string name="device_offline">Cannot contact server, check that your device is online.</string>
    <string name="sync_finished">Sync finished</string>
    <string name="syncing">Syncing</string>
    <string name="sync_error">Sync error\n</string>
    <string name="setup_google_account">Setup Google Account</string>
    <string name="google_apps_warning_text">google_apps_warning_text</string>
    <string name="no_accounts">No Google accounts on the device. Go and set one up…</string>
    <string name="connecting_text">Connecting</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="refresh_feeds">Refresh Feeds</string>

    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the
        issue !
    </string>

    <string name="crash_dialog_title">PodNoms has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click OK.
    </string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>

    <string name="gcm_registration">Got id from Google: %1$s</string>
    <string name="server_registration">Sent id to server: %1$s</string>

    <string name="description_star">Favourite</string>
    <string name="service_started">PodNoms Audio Player</string>
    <string name="service_label">PodNoms Audio Player</string>
    <string name="out_of_disk_space">Out of disk space</string>
    <string name="playback_failed">The player doesn\'t support this type of audio file.</string>
    <string name="notification_error">Error</string>
    <string name="downloading">Downloading</string>
    <string name="calculating_size">Calculating file size</string>
    <string name="download_starting">PodNoms : Starting dowload</string>
    <string name="download_complete">PodNoms: Download complete</string>
    <string name="manage_podcasts">Manage Podcasts</string>
    <string name="podcasts">Podcasts</string>
    <string name="max_episodes">Max episodes per show</string>
    <string name="max_downloads">Max downloads per show</string>
    <string name="download_settings">Download Settings</string>
    <string name="download_wifi">Download Only On Wi-Fi</string>
    <string name="invalid_podcasturl">Invalid Podcast URL</string>
    <string name="validating_podcast">Validating Podcast</string>
    <string name="deleting_podcast">Deleting Podcast</string>
    <string name="error_playing">Error playing podcast</string>
    <string name="no_network">No network connection available</string>
    <string name="stream_nowifi">No wi-fi detected, playing might incur mobile operator costs.\nContinue?</string>
    <string translatable="false" name="durationformatshort">
        <xliff:g id="format">%2$d:%5$02d</xliff:g>
    </string>
    <string translatable="false" name="durationformatlong">
        <xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g>
    </string>
    <string name="service_start_error_title" msgid="8649916852210198813">"Playback problem"</string>
    <string name="service_start_error_msg" msgid="7061754255330276478">"The song couldn\'t be played."</string>
    <string name="service_start_error_button" msgid="480888406592240723">"OK"</string>
    <string name="sdcard_missing_title" msgid="9008284946643270850">"No SD card"</string>
    <string name="sdcard_missing_title_nosdcard" msgid="7984839174824243958">"No USB storage"</string>
    <string name="sdcard_missing_message" msgid="2100061456003981823">"Your phone doesn\'t have an SD card inserted."
    </string>
    <string name="sdcard_missing_message_nosdcard" msgid="4459620970330194881">"Your phone doesn\'t have USB storage."
    </string>
    <string name="sdcard_busy_title" msgid="1162763571147174655">"SD card unavailable"</string>
    <string name="sdcard_busy_title_nosdcard" msgid="3319125156566499501">"USB storage unavailable"</string>
    <string name="sdcard_busy_message" msgid="579981082201215537">"Your SD card is busy."</string>
    <string name="sdcard_busy_message_nosdcard" msgid="1493449756827869166">"Your USB storage is busy."</string>
    <string name="sdcard_error_title" msgid="165682155008600643">"SD card error"</string>
    <string name="sdcard_error_title_nosdcard" msgid="7564338137076303931">"USB storage error"</string>
    <string name="sdcard_error_message" msgid="4574563894036627855">"An error was encountered on your SD card."</string>
    <string name="sdcard_error_message_nosdcard" msgid="4983430848526821234">"An error was encountered on your USB
        storage."
    </string>
    <string name="emptyplaylist" msgid="6711555673997896344">"Selected playlist is empty."</string>
    <string name="unknown_podcast_title" msgid="5567811106415855219">"Unknown podcast title"</string>
    <string name="unknown_podcast_description" msgid="8525145988941244727">"Unknown podcast description"</string>
    <string name="notification_artist_album"><xliff:g id="album">%2$s</xliff:g>\n
        <xliff:g id="artist">%1$s</xliff:g>
    </string>

    <string name="google_account">Google account</string>
    <string name="do_you_want_to_connect">Do you want to connect?</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="exit">Exit</string>
    <string name="connected_to_podnoms">Connected to PodNoms.</string>
    <string name="connect_text">Connect?</string>
    <string name="disconnect_text">Disconnect?</string>
    <string name="select_account">Please select account to use</string>
    <string name="needs_account">No google account found on device. Please add one before continuing.</string>
    <string name="add_account">Add account</string>
    <string name="skip">Skip</string>
    <string name="attention">Attention</string>
    <string name="podage">PODAGE</string>
    <string name="add_podcast">Add Podcast</string>
    <string name="player_back">Back</string>
    <string name="player_rewind">Rewind</string>
    <string name="player_play">Play</string>
    <string name="player_ffwd">Fast Forward</string>
    <string name="player_pause">Pause</string>
    <string name="player_forward">Player Forward</string>
    <string name="boilerplate_short">Messenger bag brunch yr hoodie</string>
    <string name="boilerplate_long">bicycle rights skateboard salvia, cred raw denim VHS put a bird on it banksy next
        level mustache vegan photo booth. Raw denim bicycle rights vinyl lo-fi thundercats. Photo booth readymade art
        party, brunch banh mi lo-fi stumptown dreamcatcher echo park
    </string>
    <string name="boilderplate_downloaded">114Mb/125Mb</string>
    <string name="delete_played">Delete played podcasts</string>
    <string name="download">Download</string>
    <string name="mark_listened">Mark as listened</string>
    <string name="share">Share</string>
    <string name="player_settings">Player settings</string>
    <string name="sort_newest">Sort by newest</string>
    <string name="sort_last_played">Sort by last played</string>
    <string name="sort">Sort</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="debug_settings">Debug Settings</string>
    <string name="error_reporting">Error reporting</string>
    <string name="error_enabled">Currently enabled</string>
    <string name="error_disabled">Currenty disabled</string>
    <string name="clean_cache">Clean cache</string>
    <string name="schedule_frequency">Schedule Frequency</string>
    <string name="mark_played_at">Mark played at %</string>
    <string name="mark_played_at_summary">Percentage played at which to mark an episode as played.</string>
    <string name="unsubscribe">Unsubscribe</string>
</resources>
