<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:showAsAction="always|withText"
        android:icon="@drawable/ic_action_search"
        android:title="@string/description_search"/>
    <item
        android:id="@+id/menu_refresh"
        android:showAsAction="always|withText"
        android:icon="@drawable/ic_action_reload"
        android:title="@string/description_refresh"/>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="always|withText"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/description_settings"/>
    <item
        android:id="@+id/menu_clean_cache"
        android:showAsAction="collapseActionView"
        android:title="@string/clean_cache"/>
</menu>
