<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:id="@+id/fragment_player_player_layout"
              android:gravity="center_horizontal"
              android:layout_width="fill_parent"
              android:visibility="visible"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/fragment_player_player_controls"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/fragment_player_btn_player_back"
                style="@style/PlayerImageButton"
                android:src="@drawable/player_back"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/player_back"/>


        <com.podnoms.android.podcatcher.ui.widgets.RepeatingImageButton
                android:id="@+id/fragment_player_btn_player_rwnd"
                style="@style/PlayerImageButton"
                android:src="@drawable/player_rwnd"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/player_rewind"/>

        <ImageButton
                android:id="@+id/fragment_player_btn_player_play"
                style="@style/PlayerImageButton"
                android:src="@drawable/player_play"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/player_play"/>

        <com.podnoms.android.podcatcher.ui.widgets.RepeatingImageButton
                android:id="@+id/fragment_player_btn_player_ffwd"
                style="@style/PlayerImageButton"
                android:src="@drawable/player_ffwd"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/player_ffwd"/>

        <ImageButton
                android:id="@+id/fragment_player_btn_player_next"
                style="@style/PlayerImageButton"
                android:src="@drawable/player_fwd"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/player_forward"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/fragment_player_info_layout"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/player_button_padding"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/fragment_player_download_progress_area"
                android:layout_width="fill_parent"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/fragment_player_downloaded"
                    style="@style/TextHeaderSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <SeekBar
                    android:id="@android:id/progress"
                    android:background="#ff5a5a5a"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="36dip"
                    android:paddingLeft="8dip"
                    android:paddingRight="8dip"
                    android:paddingBottom="4dip"/>
        </LinearLayout>

        <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/player_button_padding"
                android:weightSum="50"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/fragment_player_time_elapsed"
                    style="@style/TextHeaderSub"
                    android:gravity="center_vertical|left"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp"
                    android:layout_weight="10"/>

            <SeekBar
                    android:id="@+id/fragment_player_seekbar"
                    style="@style/TextHeaderSub"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="30"/>

            <TextView
                    android:id="@+id/fragment_player_time_complete"
                    android:gravity="center_vertical|right"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp"
                    android:layout_weight="10"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
